v1.0.0.beta2 (XXX)
- performance optimisations (all by Bernerd Schaefer)
- some improvements to text extraction from form xobjects

v1.0.0.beta1 (6th October 2011)
- ensure inline images that contain "EI" are correctly parsed
  (thanks Bernard Schaefer)
- fix parsing of inline image data

v0.12.0.alpha (28th August 2011)
- small breaking changes to the page-based API - it's alpha for a reason
  - resource related methods on Page object return raw PDF objects
  - if the caller wants the resources wrapped in a more convenient
    Ruby object (like PDF::Reader::Font or PDF::Reader::FormXObject) will
    need to do so themselves
- add support for RunLengthDecode filters (thanks Bernerd Schaefer)
- add support for standard PDF encryption (thanks Evan Brunner)
- add support for decoding stream with TIFF prediction
- new PDF::Reader::FormXObject class to simplify working with form XObjects

v0.11.0.alpha (19th July 2011)
- introduce experimental new page-based API
  - old API is deprecated but will continue to work with no warnings
- add transparent caching of common objects to ObjectHash

v0.10.0 (6th July 2011)
- support multiple receivers within a single pass over a source file
  - massive time saving when dealing with multiple receivers

v0.9.3 (2nd July 2011)
- add PDF::Reader::Reference#hash method
  - improves behaviour of Reference objects when tehy're used as Hash keys

v0.9.2 (24th April 2011)
- add basic support for fonts with Identity-V encoding.
- bug: improve robustness of text extraction
  - thanks to Evan Arnold for reporting
- bug: fix loading of nested resources on XObjects
  - thanks to Samuel Williams for reporting
- bug: improve parsing of files with XRef object streams

v0.9.1 (21st December 2010)
- force gem to only install on ruby 1.8.7 or higher
  - maintaining supprot for earlier versions takes more time than I have
    available at the moment
- bug: fix parsing of obscure pdf name format